# henry_proyecto_integrador_m2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: faq_agn.txt  faq_document.txt  faq_hothaus.txt  faq_macro.txt  faq_yam.txt  preguntas_prueba.json
outputs/: benchmark_results.json  sample_queries.json  sample_queries_evaluated.json
prompts/: prompts.py
reports/: PI_report.docx  PI_report.md
src/: app.py  benchmark.py  build_index.py  chunking.py  embeddings.py  evaluate_batch.py  evaluator.py  llm.py  metrics_writer.py  prompts_loader.py  query.py  schemas.py  settings.py  vector_store.py
tests/: test_core.py
